fixed footer alignment

--- a/css/nail.css
+++ b/css/nail.css
@@ -147,7 +147,8 @@ height: 100%;
 
 /* footer */
 .footer-img{
-  width: 80%;
+  width: 100%;
+  height: 100%;
 }
 
 #main-footer {
